# MiPlayer

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/me/mi/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/me/mi/player/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/me/mi/player/: ExampleUnitTest.java
audiotool/: build.gradle  consumer-rules.pro
audiotool/src/main/: AndroidManifest.xml
audiotool/src/main/cpp/: CMakeLists.txt  ffmpeg-cmd.cpp  fmod.cpp  lame_util.c  native-lib.cpp  soundtouch-jni.cpp  web_rtc.cpp
audiotool/src/main/cpp/ffmpeg/: cmdutils.h  config.h  ffmpeg.c  ffmpeg.h
audiotool/src/main/cpp/ffmpeg/libavcodec/: vda.h
audiotool/src/main/cpp/ffmpeg/libavdevice/: version.h
audiotool/src/main/cpp/ffmpeg/libavfilter/: avfilter.h  version.h
audiotool/src/main/cpp/ffmpeg/libavresample/: avresample.h  version.h
audiotool/src/main/cpp/ffmpeg/libavutil/: pixfmt.h
audiotool/src/main/cpp/ffmpeg/libpostproc/: version.h
audiotool/src/main/cpp/lame_3.99.5/: bitstream.c  id3tag.c  id3tag.h  lame.h  machine.h  psymodel.c  version.c
audiotool/src/main/cpp/touch/: Makefile.am  soundstretch.vcxproj
audiotool/src/main/cpp/wrtc/: analog_agc.c  config.h  digital_agc.c  downsample_fast.c  signal_processing_library.h  spl_inl.h  spl_inl_armv7.h  typedefs.h
audiotool/src/main/java/com/qk/audiotool/: AndroidAudioDecoder.java  AudioBean.java  AudioDecodeTask.java  AudioDecoder.java  AudioLoadThread.java  AudioLoadThreadEx.java  AudioUtil.java  ClipMp3.java  Constant.java  LoadMP3Ex.java  LocalAudioManager.java  MediaPlayerManager.java  MixAudioParams.java  MixAudioTask.java  MultiAudioMixer.java  Pcm2Mp3Task.java  Pcm2WavUtil.java  PlayerHelper.java  RecorderHelper.java
audiotool/src/main/java/com/qk/audiotool/ffmpeg/: AudioPlayer.java  FFmpegCmd.java
audiotool/src/main/java/com/qk/audiotool/fmod/: FmodUtils.java
audiotool/src/main/java/com/qk/audiotool/jssrc_resample/: I0Bessel.java  SSRC.java  SplitRadixFft.java
audiotool/src/main/java/com/qk/audiotool/lame/: LameUtil.java
audiotool/src/main/java/com/qk/audiotool/soundtouch/: AudioPitchProcess.java  SoundTouch.java
audiotool/src/main/java/com/qk/audiotool/utils/: DesUtils.java  FileUtil.java  LogUtil.java
audiotool/src/main/java/com/qk/audiotool/utils/encrypt/: Base64.java  Des.java  MD5.java
audiotool/src/main/java/com/webrtc/jni/: WebRtcUtils.java
audiotool/src/main/java/me/mi/audiotool/: AndroidAudioDecoder.java  AudioBean.java  AudioDecodeTask.java  AudioDecoder.java  AudioLoadThread.java  AudioLoadThreadEx.java  AudioUtil.java  ClipMp3.java  Constant.java  LoadMP3Ex.java  LocalAudioManager.java  MediaPlayerManager.java  MixAudioParams.java  MixAudioTask.java  MultiAudioMixer.java  Pcm2Mp3Task.java  Pcm2WavUtil.java  PlayerHelper.java  RecorderHelper.java
audiotool/src/main/java/me/mi/audiotool/ffmpeg/: AudioPlayer.java  FFmpegCmd.java
audiotool/src/main/java/me/mi/audiotool/fmod/: FmodUtils.java
audiotool/src/main/java/me/mi/audiotool/jssrc_resample/: I0Bessel.java  SSRC.java  SplitRadixFft.java
audiotool/src/main/java/me/mi/audiotool/lame/: LameUtil.java
audiotool/src/main/java/me/mi/audiotool/soundtouch/: AudioPitchProcess.java  SoundTouch.java
audiotool/src/main/java/me/mi/audiotool/utils/: DesUtils.java  FileUtil.java  LogUtil.java
audiotool/src/main/java/me/mi/audiotool/utils/encrypt/: Base64.java  MD5.java
audiotool/src/main/java/me/webrtc/jni/: WebRtcUtils.java
audiotool/src/main/res/values/: colors.xml
gradle/wrapper/: gradle-wrapper.properties
libmpg123/: build.gradle
libmpg123/src/main/java/me/rosuh/libmpg123/: MPG123.java
libmpg123/src/main/jni/mpg123-1.25.12/android/: mpg123.h
